crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@97.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select nummultirange(numrange(2.0, 1.0));"
---
SelectStmt@0..41
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..38
    FuncCall@7..38
      Ident@7..20 "nummultirange"
      Ascii40@20..21 "("
      FuncCall@21..38
        Ident@21..29 "numrange"
        Ascii40@29..30 "("
        AConst@30..33
          Fconst@30..33 "2.0"
        Ascii44@33..34 ","
        Whitespace@34..35 " "
        AConst@35..38
          Fconst@35..38 "1.0"
  Ascii41@38..39 ")"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

