crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@98.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select nummultirange(numrange(5.0, 6.0), numrange(1.0, 2.0));"
---
SelectStmt@0..61
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..58
    FuncCall@7..58
      Ident@7..20 "nummultirange"
      Ascii40@20..21 "("
      FuncCall@21..38
        Ident@21..29 "numrange"
        Ascii40@29..30 "("
        AConst@30..33
          Fconst@30..33 "5.0"
        Ascii44@33..34 ","
        Whitespace@34..35 " "
        AConst@35..38
          Fconst@35..38 "6.0"
      Ascii41@38..39 ")"
      Ascii44@39..40 ","
      Whitespace@40..41 " "
      FuncCall@41..58
        Ident@41..49 "numrange"
        Ascii40@49..50 "("
        AConst@50..53
          Fconst@50..53 "1.0"
        Ascii44@53..54 ","
        Whitespace@54..55 " "
        AConst@55..58
          Fconst@55..58 "2.0"
  Ascii41@58..59 ")"
  Ascii41@59..60 ")"
  Ascii59@60..61 ";"

