crates/pg_syntax/tests/snapshots/postgres_regress/name@10.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO NAME_TBL(f1) VALUES ('1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ');"
---
InsertStmt@0..109
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "NAME_TBL"
  Ascii40@20..21 "("
  ResTarget@21..23
    Ident@21..23 "f1"
  Ascii41@23..24 ")"
  Whitespace@24..25 " "
  SelectStmt@25..107
    Values@25..31 "VALUES"
    Whitespace@31..32 " "
    Ascii40@32..33 "("
    List@33..107
      AConst@33..107
        Sconst@33..107 "'1234567890ABCDEFGHIJ ..."
  Ascii41@107..108 ")"
  Ascii59@108..109 ";"

